--- a/2_projeto/CSS/style.css
+++ b/2_projeto/CSS/style.css
@@ -29,7 +29,9 @@ main {
   border-radius: 10px;
 }
 header {
-  text-align: center;
+ display: grid;
+ justify-content: center;
+ text-align: center;
 }
 
 header > h1 {
@@ -112,3 +114,42 @@ strong {
   border-radius: 10px;
   padding: 10px;
 }
+
+.card-container {
+  perspective: 1000px;
+  width: 100%;
+  height: 200px;
+  margin: 20px auto;
+}
+
+.card {
+  width: 350px;
+  height: 100%;
+  position: absolute;
+  transform-style: preserve-3d;
+  transition: transform 0.8s ease;
+}
+
+.card-container:active .card {
+  transform: rotateY(180deg);
+}
+
+.card-front, .card-back {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  backface-visibility: hidden;
+  border-radius: 10px;
+  overflow: hidden;
+}
+
+.card-front img, .card-back img {
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.card-back {
+  transform: rotateY(180deg);
+}
+
